dataset1235/2025-2/2868285114/users/1072499734/executions/3649835072_2667036473.log
== SUBMISSION (2025-08-19 22:54:56)
-- CODE: 
tempC = float (input("Temperatura em celcius:"))
tempk = tempc + 273.15
print (round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:56:03)
-- CODE: 
tempC = float (input("Temperatura em celcius:"))
tempK = tempC + 273.15
print (round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em celcius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em celcius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em celcius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em celcius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em celcius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em celcius:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:54:37)
-- CODE: 
tempC = float (input("Temperatura em celcius"))
tempk = tempc + 273.15
print (round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:54:54)
-- CODE: 
tempC = float (input("Temperatura em celcius:"))
tempk = tempc + 273.15
print (round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempk = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:55:34)
-- CODE: 
tempC = float (input("Temperatura em celcius:"))
tempK = tempc + 273.15
print (round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:55:32)
-- CODE: 
tempC = float (input("Temperatura em celcius:"))
tempK = tempc + 273.15
print (round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempc + 273.15
            ^^^^^
NameError: name 'tempc' is not defined. Did you mean: 'tempC'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
